--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Akash Das",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "mongoose": "^5.11.13"
+    "mongoose": "^5.11.13",
+    "morgan": "^1.10.0"
   }
 }
