--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a Blog Application with multiple user and user dashboard",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "Akash Das",
   "license": "ISC",
@@ -13,5 +13,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.11.13",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
