--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.9.2",
     "mongoose": "^5.11.13",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
