--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "chalk": "^4.1.0",
+    "cheerio": "^1.0.0-rc.5",
     "config": "^3.3.3",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.4.1",
