--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express-validator": "^6.9.2",
     "mongoose": "^5.11.13",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "reading-time": "^1.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
